--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,3 +1,28 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+.App {
+  /* background: url(./assets/bcg.jpg) no-repeat center center/cover; */
+  width: 100vw;
+  height: 100vh;
+}
+header {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 30px 10%;
+}
+.nav-links {
+  color: #fff;
+  text-decoration: none;
+  padding: 10px 15px;
+  margin: 40px;
+  border: 2px solid white;
+  border-radius: 30px;
+}
 .grid {
   display: grid;
   grid-template-columns: repeat(3, minmax(0, 1fr));
