--- a/src/App.css
+++ b/src/App.css
@@ -4,10 +4,14 @@
   padding: 0;
 }
 
-.App {
-  /* background: url(./assets/bcg.jpg) no-repeat center center/cover; */
+.home {
+  background: url(./assets/bcg.jpg) no-repeat center center/cover;
   width: 100vw;
   height: 100vh;
+}
+h1 {
+  padding: 0;
+  margin: 0;
 }
 header {
   display: flex;
