--- a/src/App.css
+++ b/src/App.css
@@ -5,14 +5,24 @@
 }
 
 .home {
-  background: url(./assets/bcg.jpg) no-repeat center center/cover;
+  background: url(./assets/homebcg.jpg) no-repeat center center/cover;
   width: 100vw;
   height: 100vh;
+}
+.events {
+  background: url(./assets/eventsbcg.jpg) no-repeat center center/cover;
+  width: 100vw;
+  height: 100vh;
+  background-attachment: scroll;
 }
 .home .nav-links:hover {
   color: purple;
   background-color: rgba(255, 255, 255, 0.8);
-  transition: all 500ms ease-in-out;
+  transition: all 300ms ease-in-out;
+}
+.logo {
+  width: 20%;
+  border-radius: 20px;
 }
 h1 {
   padding: 0;
@@ -38,7 +48,7 @@ header {
   gap: 1rem;
 }
 .container {
-  max-width: 1280px;
+  /* max-width: 1280px; */
   margin: 0 auto;
 }
 .card {
