--- a/src/App.css
+++ b/src/App.css
@@ -21,19 +21,27 @@
   transition: all 300ms ease-in-out;
 }
 .logo {
-  width: 20%;
+  width: 30%;
   border-radius: 20px;
+}
+li {
+  list-style: none;
+  padding-top: 20px;
+}
+.navbar {
+  justify-content: space-between;
+  padding: 50px;
 }
 h1 {
   padding: 0;
   margin: 0;
 }
-header {
+/* header {
   display: flex;
   justify-content: flex-end;
   align-items: center;
   padding: 30px 10%;
-}
+} */
 .home .nav-links {
   color: #fff;
   text-decoration: none;
