--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
   margin: 0;
   padding: 0;
 }
-
+/* Home Page */
 .home {
   background: url(./assets/homebcg.jpg) no-repeat center center/cover;
   width: 100vw;
@@ -15,13 +15,9 @@
   height: 100vh;
   background-attachment: scroll;
 }
-.home .nav-links:hover {
-  color: purple;
-  background-color: rgba(255, 255, 255, 0.8);
-  transition: all 300ms ease-in-out;
-}
+
 .logo {
-  width: 30%;
+  width: 40%;
   border-radius: 20px;
 }
 li {
@@ -30,7 +26,7 @@ li {
 }
 .navbar {
   justify-content: space-between;
-  padding: 50px;
+  padding: 120px;
 }
 h1 {
   padding: 0;
@@ -42,21 +38,45 @@ h1 {
   align-items: center;
   padding: 30px 10%;
 } */
+
+/* Navbar */
 .home .nav-links {
   color: #fff;
   text-decoration: none;
   padding: 10px 15px;
   margin: 40px;
-  border: 2px solid white;
+  border: 3px solid white;
   border-radius: 30px;
+  font-size: 18px;
 }
+.home .nav-links:hover {
+  color: #9f6dde;
+  background-color: rgba(255, 255, 255, 0.8);
+  transition: all 300ms ease-in-out;
+}
+.events .nav-links,
+.board .nav-links {
+  color: #9f6dde;
+  text-decoration: none;
+  padding: 10px 15px;
+  margin: 40px;
+  border: 3px solid #9f6dde;
+  border-radius: 30px;
+  font-size: 18px;
+}
+.events .nav-links:hover,
+.board .nav-links:hover {
+  color: rgba(255, 255, 255, 0.8);
+  background-color: #9f6dde;
+  transition: all 300ms ease-in-out;
+}
+/* Events */
 .grid {
   display: grid;
   grid-template-columns: repeat(3, minmax(0, 1fr));
   gap: 1rem;
 }
 .container {
-  /* max-width: 1280px; */
   margin: 0 auto;
 }
 .card {
@@ -65,4 +85,10 @@ h1 {
 }
 .card img {
   width: 100%;
+}
+/* Board */
+.board {
+  background: url(./assets/boardbcg.jpg) no-repeat center center/cover;
+  width: 100vw;
+  height: 100vh;
 }
