--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: "Poppins", sans-serif;
 }
 /* Home Page */
 .home {
@@ -34,9 +35,29 @@ h1 {
 }
 .explore-homepage {
   text-align: center;
-  font-size: 40px;
-  font-family: poppins;
+  font-size: 20px;
+  padding-top: 150px;
+  margin: 50px;
 }
+.explore-homepage p {
+  padding: 10px;
+}
+.explore-link {
+  text-decoration: none;
+  color: #9f6dde;
+  padding: 10px 25px;
+  border-radius: 12px;
+  font-size: 30px;
+  border: 2px solid #9f6dde;
+}
+.explore-link:hover {
+  color: #fff;
+  cursor: pointer;
+  background-color: #b791e5;
+  color: #fff;
+  transition: all 300ms ease-in-out;
+}
+
 /* header {
   display: flex;
   justify-content: flex-end;
