--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,11 @@
   padding: 0;
   font-family: "Poppins", sans-serif;
 }
+.underline {
+  text-decoration: underline;
+  font-weight: 500;
+  color: grey;
+}
 /* Home Page */
 .home {
   background: url(./assets/homebcg.jpg) no-repeat center center/cover;
@@ -81,6 +86,7 @@ h1 {
   transition: all 300ms ease-in-out;
 }
 .events .nav-links,
+.event .nav-links,
 .board .nav-links {
   color: #9f6dde;
   text-decoration: none;
@@ -91,12 +97,22 @@ h1 {
   font-size: 18px;
 }
 .events .nav-links:hover,
-.board .nav-links:hover {
+.board .nav-links:hover,
+.event .nav-links:hover {
   color: rgba(255, 255, 255, 0.8);
   background-color: #9f6dde;
   transition: all 300ms ease-in-out;
 }
 /* Events */
+.events h1,
+h3 {
+  color: #9f6dde;
+}
+.events h1 {
+  font-weight: bold;
+  padding: 20px;
+  font-size: 50px;
+}
 .grid {
   display: grid;
   grid-template-columns: repeat(3, minmax(0, 1fr));
@@ -108,9 +124,24 @@ h1 {
 .card {
   width: 95%;
   margin: 0 auto;
+  padding: 10px;
+  margin: 10px;
 }
 .card img {
   width: 100%;
+  border-radius: 7px;
+  margin-bottom: 10px;
+}
+.card button {
+  padding: 10px 25px;
+  border-radius: 5px;
+  color: #9f6dde;
+  border: 1px solid #9f6dde;
+  background-color: white;
+  justify-content: end;
+}
+.date-location {
+  color: grey;
 }
 /* Board */
 .board {
