--- a/src/App.css
+++ b/src/App.css
@@ -140,8 +140,16 @@ h3 {
   background-color: white;
   justify-content: end;
 }
+.card button:hover {
+  color: #fff;
+  background-color: #9f6dde;
+  transition: all 300ms ease-in-out;
+}
 .date-location {
   color: grey;
+}
+.events select {
+  margin: 15px;
 }
 /* Board */
 .board {
@@ -149,9 +157,27 @@ h3 {
   width: 100vw;
   height: 100vh;
 }
-
+.board h1 {
+  text-align: center;
+  color: #9f6dde;
+}
+th {
+  background-color: #fff;
+  color: #9f6dde;
+}
 /* Event  */
 .event .card {
   max-width: 50%;
   margin: 0 auto;
+}
+.event form {
+  text-align: center;
+}
+.event input {
+  margin: 10px;
+}
+.event button:hover {
+  color: #fff;
+  background-color: #9f6dde;
+  transition: all 300ms ease-in-out;
 }
