--- a/src/App.css
+++ b/src/App.css
@@ -40,20 +40,22 @@ h1 {
 }
 .explore-homepage {
   text-align: center;
-  font-size: 20px;
-  padding-top: 150px;
-  margin: 50px;
+  font-size: 1.5rem;
+  padding-top: 10rem;
+  margin: 3rem;
 }
 .explore-homepage p {
-  padding: 10px;
+  padding: 0.5rem;
+  margin-bottom: 2rem;
 }
 .explore-link {
   text-decoration: none;
   color: #9f6dde;
-  padding: 10px 25px;
-  border-radius: 12px;
-  font-size: 30px;
-  border: 2px solid #9f6dde;
+  padding: 15px 35px;
+  border-radius: 25px;
+  font-size: 20px;
+  border: 3px solid #9f6dde;
+  font-weight: 600;
 }
 .explore-link:hover {
   color: #fff;
@@ -69,7 +71,30 @@ h1 {
   align-items: center;
   padding: 30px 10%;
 } */
-
+/* About */
+.about {
+  background: url(./assets/eventsbcg.jpg) no-repeat center center/cover;
+  width: 100vw;
+  height: 100vh;
+  padding-top: 10rem;
+}
+.about h2 {
+  color: #9f6dde;
+}
+.dnd-img {
+  width: 32rem;
+  border-radius: 4px;
+  margin: 3rem;
+}
+.about .dnd-description {
+  width: 70%;
+  /* margin: 3rem; */
+  margin-left: 8rem;
+  background-color: #fff;
+  padding: 1rem;
+  border-radius: 4px;
+  margin-top: 4rem;
+}
 /* Navbar */
 .home .nav-links {
   color: #fff;
@@ -103,8 +128,7 @@ h1 {
   background-color: #9f6dde;
   transition: all 300ms ease-in-out;
 }
-/* Events */
-.events h1,
+.board .nav- .events h1,
 h3 {
   color: #9f6dde;
 }
@@ -151,7 +175,6 @@ h3 {
 .events select {
   margin: 15px;
 }
-/* Board */
 .board {
   background: url(./assets/boardbcg.jpg) no-repeat center center/cover;
   width: 100vw;
@@ -168,10 +191,8 @@ td {
   background-color: #fff;
   color: #9f6dde;
 }
-
-/* Event  */
-.event .card {
-  max-width: 50%;
+background .event .card {
+  max-width: 40%;
   margin: 0 auto;
 }
 .event form {
@@ -184,4 +205,13 @@ td {
   color: #fff;
   background-color: #9f6dde;
   transition: all 300ms ease-in-out;
+}
+.create-page {
+  background: url(./assets/plain-purple.jpg) no-repeat center center/cover;
+}
+.create-page h1 {
+  color: #9f6dde;
+}
+.cancel-btn {
+  text-decoration: none;
 }
