--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+:root {
+  overflow-x: hidden;
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -14,6 +18,7 @@
   background: url(./assets/homebcg.jpg) no-repeat center center/cover;
   width: 100vw;
   height: 100vh;
+  overflow-x: hidden;
 }
 .bcg-img {
   background: url(./assets/eventsbcg.jpg);
@@ -77,6 +82,7 @@ h1 {
   width: 100vw;
   height: 100vh;
   padding-top: 10rem;
+  overflow-x: hidden;
 }
 .about h2 {
   color: #9f6dde;
@@ -139,7 +145,7 @@ h3 {
 }
 .grid {
   display: grid;
-  grid-template-columns: repeat(3, minmax(0, 1fr));
+  grid-template-columns: repeat(2, minmax(0, 1fr));
   gap: 1rem;
 }
 .container {
@@ -191,7 +197,7 @@ td {
   background-color: #fff;
   color: #9f6dde;
 }
-background .event .card {
+.event .card {
   max-width: 40%;
   margin: 0 auto;
 }
@@ -214,4 +220,19 @@ background .event .card {
 }
 .cancel-btn {
   text-decoration: none;
+}
+
+/* @media only screen and (min-width: 601px) {
+  .grid {
+    display: grid;
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+    gap: 1rem;
+  }
+} */
+@media only screen and (max-width: 600px) {
+  .grid {
+    display: grid;
+    grid-template-columns: repeat(1, minmax(0, 1fr));
+    gap: 1rem;
+  }
 }
