--- a/src/App.css
+++ b/src/App.css
@@ -57,7 +57,7 @@ h1 {
   text-decoration: none;
   color: #9f6dde;
   padding: 15px 35px;
-  border-radius: 25px;
+  border-radius: 30px;
   font-size: 20px;
   border: 3px solid #9f6dde;
   font-weight: 600;
@@ -65,7 +65,7 @@ h1 {
 .explore-link:hover {
   color: #fff;
   cursor: pointer;
-  background-color: #b791e5;
+  background-color: #9f6dde;
   color: #fff;
   transition: all 300ms ease-in-out;
 }
