--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -31,13 +31,27 @@
   background-color: #9f6dde;
   transition: all 300ms ease-in-out;
 }
+.navbar {
+  /* justify-content: space-between;
+  padding: 13rem; */
+  max-width: 70%;
+  align-items: center;
+  text-align: center;
+  margin: 0 auto;
+}
 .board .nav-links .events h1,
 h3 {
   color: #9f6dde;
 }
 @media only screen and (max-width: 600px) {
   .navbar {
-    padding: 10px;
+    /* padding: 10px; */
     flex-direction: column;
+    justify-content: space-around;
+    padding: 0;
+    width: 50%;
+  }
+  .home .nav-links {
+    margin: 1rem;
   }
 }
